💥ADDED💥 ab_glyph and fontdb as dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ab_glyph = "0.2.29"
+fontdb = "0.23.0"
 mlua                = { version = "0.10.5", features = [ "anyhow", "async", "error-send", "lua54", "macros", "serialize" ] }
 rand = "0.9.1"
 svg = "0.18.0"
