--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 ab_glyph = "0.2.29"
+css-style = "0.14.1"
 fontdb = "0.23.0"
 mlua                = { version = "0.10.5", features = [ "anyhow", "async", "error-send", "lua54", "macros", "serialize" ] }
 phf = { version = "0.11.3", features = ["macros"] }
