Added kurbo and harfrust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2024"
 ab_glyph = "0.2.29"
 css-style = "0.14.1"
 fontdb = "0.23.0"
+harfrust = "0.1.1"
+kurbo = "0.11.3"
 lyon = "1.0.1"
 phf = { version = "0.11.3", features = ["macros"] }
 rand = "0.9.1"
 rhai = "1.22.2"
 rhai-doc = {path = "/home/miles/Downloads/armour/src/rhai-doc"}
-rustybuzz = "0.20.1"
 svg = "0.18.0"
 ttf-parser = "0.25.1"
 unicode-segmentation = "1.12.0"
